[package]
name = "kube-environment"
version = "0.1.6"
authors = ["Stefan Breetveld <spiderbiggen@gmail.com>"]
edition = "2021"
description = "Kubernetes manager for deployment via github actions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"

[profile.release]
lto = "fat"
strip = "symbols"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
envy = "0.4.2"
futures = "0.3.29"
k8s-openapi = { version = "0.22.0", features = ["v1_29"] }
kube = { version = "0.92.1", features = ["runtime", "derive"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "decompression-full", "compression-full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
